force-app/main/default/objects/BMCServiceDesk__Change_Manifest__c/BMCServiceDesk__Change_Manifest__c.object-meta.xml
<CustomObject>
    <description>Stores data that is used to track progress of a change request for various status values.</description>
    <label>Change Manifest</label>
    <nameField>
        <displayFormat>MAN-{0}</displayFormat>
        <label>Manifest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Manifests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>