force-app/main/default/objects/BMCServiceDesk__Change_Manifest__c/fields/BMCServiceDesk__FKChange_Request__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange_Request__c</fullName>
    <label>Change Request</label>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>Change Manifests</relationshipLabel>
    <relationshipName>Change_Manifests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>