force-app/main/default/objects/BMCServiceDesk__Change_Manifest__c/fields/BMCServiceDesk__FKFuture_Tasks__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKFuture_Tasks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
    <relationshipLabel>Change Manifests</relationshipLabel>
    <relationshipName>Change_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>