force-app/main/default/objects/BMCServiceDesk__Change_Manifest__c/fields/BMCServiceDesk__Template_Order__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Template_Order__c</fullName>
    <formula>BMCServiceDesk__FKTemplate_Linking__r.BMCServiceDesk__orderNumber__c</formula>
    <label>Template Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>